Fixed z-index to enable code loader My bad :(

--- a/css/content.css
+++ b/css/content.css
@@ -2,11 +2,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Oswald&display=swap');
 
+html {
+    background-color: #988D7C;
+}
+
 main {
     box-sizing: border-box;
     font-family: 'Oswald', sans-serif;
     padding: 0;
     margin: 0;
+    z-index: 1;
 }
 
 .content-container {
