--- a/css/index.css
+++ b/css/index.css
@@ -47,7 +47,6 @@ main {
     padding: 2rem;
     background-color: #F4EAE2;
     transition: transform 0.5s ease;
-    z-index: 1;
 }
 
 aside {
@@ -60,5 +59,6 @@ footer {
     grid-area: footer;
     padding: 2rem;
     background-color: #F4EAE2;
+    transition: transform 0.5s ease;
 }
 
