--- a/css/loader.css
+++ b/css/loader.css
@@ -13,6 +13,8 @@
     font-weight: bold;
     font-size: 100px;
     transition: opacity 2s, visibility 2s;
+
+    z-index: 9999;
 }
 
 .code-loader-hidden {
